--- a/pages/layout/reporte_Inventario.html
+++ b/pages/layout/reporte_Inventario.html
@@ -129,7 +129,6 @@
                 </p>
               </a>
             </li>
-
             <li class="nav-item">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas  fa-store"></i>
@@ -143,18 +142,18 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="../examples/inventario.html" class="nav-link">
+                  <a href="pages/examples/compras.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Inventario</p>
                   </a>
                 </li>
   
                 <li class="nav-item">
-                  <a href="../examples/reporte_inventario.html" class="nav-link">
+                  <a href="pages/examples/compras - copia.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Inventario</p>
+                    <p>Reporte de Compras</p>
                   </a>
-                </li>              
+                </li>            
                 
               </ul>
             </li>
@@ -184,7 +183,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="boxed copy.html" class="nav-link">
+                  <a href="boxed.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Compras</p>
                   </a>
