--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -119,14 +119,32 @@
           </li>
 
           <li class="nav-item">
-            <a href="../examples/inventario.html" class="nav-link">
-              <i class="nav-icon fas fa-warehouse"></i>
-              
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas  fa-store"></i>
+             
+             
               <p>
                 Inventario
-                
+                <i class="fas fa-angle-left right"></i>
+               
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="../examples/inventario.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Inventario</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/reporte_inventario.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Reporte de Inventario</p>
+                </a>
+              </li>              
+              
+            </ul>
           </li>
 
           <li class="nav-item">
@@ -237,12 +255,12 @@
              
              <tr>
                
-              <th style="width:7px">N_Venta</th>
+              <th style="width:7px">N_Factura</th>
               <th>Fecha Ventas</th>
               <th>Cliente</th>
               <th>Usuario</th>
-              <th>Total </th>
               <th>Impuesto</th>
+              <th>Total </th>
               <th>Acciones</th>
              </tr> 
     
@@ -255,8 +273,8 @@
                 <td>22-03-2022</td>
                 <td>Irv Rosa</td>
                 <td>Vendedor</td>
-                <td>L.20,000</td>
                 <td>0.15</td>
+                <td>L.20,000</td>
                 <td>
     
                   <div class="btn-group">
@@ -279,8 +297,8 @@
                 <td>22-03-2022</td>
                 <td>Ninisha Brown</td>
                 <td>Vendedor</td>
-                <td>L.35,000</td>
                 <td>0.15</td>
+                <td>L.35,000</td>
                 <td>
               
     
@@ -304,8 +322,8 @@
                 <td>22-03-2022</td>
                 <td>Juan Martinez</td>
                 <td>Vendedor</td>
-                <td>L.20,000</td>
                 <td>0.15</td>
+                <td>L.20,000</td>
                 <td>
     
                   <div class="btn-group">
@@ -513,6 +531,7 @@
 
           </div>
 
+
           <!-- ENTRADA PARA EL TELÉFONO -->
             
           <div class="form-group">
@@ -581,10 +600,10 @@
                         <td>Producto1</td>
                         <td>2</td>
                         <td>20,000</td>
-                        <td>0.10</td>
+                        <td>0.00</td>
                         <td>L.40,000</td>
+                        <td>40,000</td>
                         <td>0.15</td>
-                        <td>L.4600</td>
                         <td>L.41,400</td>
             
                       </tr>
