--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -241,7 +241,7 @@
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                <li class="breadcrumb-item active">Reporte de Ventas</li>
+                <li class="breadcrumb-item active">Reporte de Compras</li>
               </ol>
             </div>
           </div>
@@ -326,34 +326,34 @@
                 <tbody>
 
                   <tr>
-                    <td>001</td>
-                    <td>22-03-2022</td>
-                    <td>Irv Rosa</td>
-                    <td>Vendedor</td>
-                    <td>L.20,000</td>
-                    <td>0.15</td>
+                    <td>01</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Camisas</td>
+                    <td>25</td>
+                    <td>L.250</td>
+                    <td>6,250</td>
 
                   </tr>
 
 
                   <tr>
-                    <td>012</td>
-                    <td>22-03-2022</td>
-                    <td>Ninisha Brown</td>
-                    <td>Vendedor</td>
-                    <td>L.35,000</td>
-                    <td>0.15</td>
+                    <td>02</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Pantalones</td>
+                    <td>20</td>
+                    <td>L.400</td>
+                    <td>8,000</td>
 
                   </tr>
 
 
                   <tr>
-                    <td>003</td>
-                    <td>22-03-2022</td>
-                    <td>Juan Martinez</td>
-                    <td>Vendedor</td>
-                    <td>L.20,000</td>
-                    <td>0.15</td>
+                    <td>03</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Gorras</td>
+                    <td>15</td>
+                    <td>L.150</td>
+                    <td>2,250</td>
 
                   </tr>
 
@@ -373,7 +373,7 @@
                   <tr>
 
                     <td>Total</td>
-                    <td>200,000</td>
+                    <td>16,500</td>
 
 
                   </tr>
