--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -326,34 +326,34 @@
                 <tbody>
 
                   <tr>
-                    <td>001</td>
-                    <td>22-03-2022</td>
-                    <td>Irv Rosa</td>
-                    <td>Vendedor</td>
-                    <td>L.20,000</td>
-                    <td>0.15</td>
+                    <td>01</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Camisas</td>
+                    <td>50</td>
+                    <td>L.450</td>
+                    <td>22,000</td>
 
                   </tr>
 
 
                   <tr>
-                    <td>012</td>
-                    <td>22-03-2022</td>
-                    <td>Ninisha Brown</td>
-                    <td>Vendedor</td>
-                    <td>L.35,000</td>
-                    <td>0.15</td>
+                    <td>02</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Pantalones</td>
+                    <td>25</td>
+                    <td>L.450</td>
+                    <td>13,750</td>
 
                   </tr>
 
 
                   <tr>
-                    <td>003</td>
-                    <td>22-03-2022</td>
-                    <td>Juan Martinez</td>
-                    <td>Vendedor</td>
-                    <td>L.20,000</td>
-                    <td>0.15</td>
+                    <td>03</td>
+                    <td>01-03-2022 al 15-03-2022</td>
+                    <td>Gorras</td>
+                    <td>15</td>
+                    <td>L.250</td>
+                    <td>3,750</td>
 
                   </tr>
 
@@ -373,7 +373,7 @@
                   <tr>
 
                     <td>Total</td>
-                    <td>200,000</td>
+                    <td>39,500</td>
 
 
                   </tr>
