--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -44,7 +44,25 @@
 
       </ul>
 
-      <!-- Right navbar links -->
+     <!-- Right navbar links -->
+    <ul class="navbar-nav ml-auto">
+      <!-- Navbar Search --> <!-- ICONOS EN LA BARRA DE NAVEGACION -->
+      <li class="nav-item">
+        <a class="nav-link" data-widget="facebook" href="https://www.facebook.com/tiendamilitarhn5" role="button">
+          <i class="fab fa-facebook fa-1.5x"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-widget="phone" href="#" role="button">
+          <i class="fas fas fa-phone-alt fa-1.5x"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-widget="mapa" href="https://goo.gl/maps/ssuy5qxz1KHUqjWCA" role="button">
+          <i class="fas fa-map-marker-alt fa-1.5x"></i>
+        </a>
+      </li>
+    </ul>
 
     </nav>
     <!-- /.navbar -->
