agg logos a todos y vincule href

--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -183,9 +183,15 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="top-nav-sidebar.html" class="nav-link">
+                <a href="top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Nueva Orden de Compra</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../examples/devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
                 </a>
               </li>
               <li class="nav-item">
@@ -228,7 +234,7 @@
               </li>            
             </ul>
             <li class="nav-item">
-              <a href="pages/examples/contactanos.html" class="nav-link">
+              <a href="../examples/contactanos.html" class="nav-link">
                 <i class="nav-icon far fa-envelope"></i>
                 <p>
                   Contacto
@@ -267,11 +273,7 @@
       <!-- Default box -->
       <div class="card">
         <div class="card-header">
-          <button class="btn btn-primary" data-toggle="modal" data-target="#modalAgregarVentas">
-          
-            Agregar Venta
-  
-          </button>
+          <div class="col-2"><a href="top-nav-sidebar.html"><button class="btn btn-success">Nueva Venta</button></a></div>
         </div>
         <div class="card-body">
           <table class="table table-bordered table-striped dt-responsive tablas">
@@ -392,7 +394,7 @@
     ======================================-->
 
 
-  <div class="modal fade" id="modalAgregarVentas" data-backdrop="static"> <!-- Modal padre de todo el contenido -->
+  <div class="modal fade" id="#" data-backdrop="static"> <!-- Modal padre de todo el contenido -->
     <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content"> <!-- Elemento hijos-->
         <form role="form" method="post">
