--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -45,6 +45,24 @@
       </ul>
 
       <!-- Right navbar links -->
+      <ul class="navbar-nav ml-auto">
+        <!-- Navbar Search --> <!-- ICONOS EN LA BARRA DE NAVEGACION -->
+        <li class="nav-item">
+          <a class="nav-link" data-widget="facebook" href="https://www.facebook.com/tiendamilitarhn5" role="button">
+            <i class="fab fa-facebook fa-1.5x"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-widget="phone" href="#" role="button">
+            <i class="fas fas fa-phone-alt fa-1.5x"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-widget="mapa" href="https://goo.gl/maps/ssuy5qxz1KHUqjWCA" role="button">
+            <i class="fas fa-map-marker-alt fa-1.5x"></i>
+          </a>
+        </li>
+      </ul>
 
     </nav>
     <!-- /.navbar -->
@@ -53,9 +71,7 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index.html" class="brand-link">
-        <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-light">Tienda Militar HN</span>
+        <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
       </a>
 
       <!-- Sidebar -->
