--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -71,9 +71,7 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index.html" class="brand-link">
-        <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-light">Tienda Militar HN</span>
+        <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
       </a>
 
       <!-- Sidebar -->
@@ -237,6 +235,14 @@
                   <a href="boxed.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Ventas</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="../examples/contactanos.html" class="nav-link">
+                    <i class="nav-icon far fa-envelope"></i>
+                    <p>
+                      Contacto
+                    </p>
                   </a>
                 </li>
 
