--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -58,8 +58,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../../index.html" class="brand-link">
-      <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Tienda Militar HN</span>
+      <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
 
     <!-- Sidebar -->
@@ -164,7 +163,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="../example/compras.html" class="nav-link">
+            <a href="#" class="nav-link">
               <i class="nav-icon fas  fa-store"></i>
              
              
@@ -176,7 +175,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="../example/compras.html"class="nav-link">
+                <a href="../examples/compras.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Administrar Compras</p>
                 </a>
@@ -185,6 +184,12 @@
                 <a href="top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Nueva Orden de Compra</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../examples/devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
                 </a>
               </li>
               <li class="nav-item">
