--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -104,7 +104,7 @@
               </li>
     
               <li class="nav-item">
-                <a href="../example/clientes.html" class="nav-link">
+                <a href="../examples/clientes.html" class="nav-link">
                   <i class="nav-icon fas fa-users"></i>
                   <p>
                     Clientes
@@ -193,6 +193,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="../examples/archivofactura.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="boxed copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
@@ -233,7 +239,7 @@
             </ul>
           </li>  
           <li class="nav-item">
-            <a href="contactanos.html" class="nav-link">
+            <a href="../examples/contactanos.html" class="nav-link">
               <i class="nav-icon far fa-envelope"></i>
               <p>
                 Contacto
@@ -339,15 +345,9 @@
                 <td>OD-202201</td>
                 <td>000-001-01-00171005</td>
                 <td>L.20,000</td>
-                <td>Contado</td>
-                <td>Compra de mercaderia camisas Nautica</td>
-                <td><button class="btn btn-success btn-xs">Pagado</button></td>
-                
-                  <td>
+                <td>
     
                   <div class="btn-group">
-
-                    <button class="btn btn-info"><i class="fas fa-file-pdf"></i></button>
                       
                     <button class="btn btn-warning"><i class="fas fa-pencil-alt"></i></button>
     
@@ -370,15 +370,9 @@
                 <td>OD-202201</td>
                 <td>000-001-01-00171005</td>
                 <td>L.20,000</td>
-                <td>Contado</td>
-                <td>Compra de mercaderia camisas Nautica</td>
-                <td><button class="btn btn-danger btn-xs">Crédito</button></td>
-                
-                  <td>
+                <td>
     
                   <div class="btn-group">
-
-                    <button class="btn btn-info"><i class="fas fa-file-pdf"></i></button>
                       
                     <button class="btn btn-warning"><i class="fas fa-pencil-alt"></i></button>
     
@@ -390,9 +384,6 @@
     
               </tr>
 
-              
-
-              
 
               
                
