--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -194,9 +194,21 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="top-nav-sidebar.html" class="nav-link">
+                  <a href="top-nav-sidebar copy.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Nueva Orden de Compra</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="../examples/devolucionescompras.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Devoluciones sobre compras</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="../examples/archivofactura.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Archivo de Factura</p>
                   </a>
                 </li>
                 <li class="nav-item">
