--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -200,6 +200,18 @@
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="../examples/devolucionescompras.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Devoluciones sobre compras</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="../examples/archivofactura.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Archivo de Factura</p>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a href="boxed copy.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Compras</p>
