--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -204,6 +204,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="../examples/archivofactura.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Archivo de Factura</p>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a href="boxed copy.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Compras</p>
