--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -195,6 +195,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="../examples/devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="boxed copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
