--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tienda Militar HN | Reporte de Compras</title>
-  <link rel="icon" href="../../dist/img/icono.png">
+  <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -31,6 +31,11 @@
 <body class="hold-transition sidebar-mini">
   <!-- Site wrapper -->
   <div class="wrapper">
+
+    <div class="preloader flex-column justify-content-center align-items-center">
+      <img class="animation__shake" src="../../dist/img/LOGO DIMINUTO.jpg" alt="logodiminuto" height="60" width="60">
+    </div>
+    
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <!-- Left navbar links -->
