--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -254,8 +254,17 @@
                     <p>Reporte de Ventas</p>
                   </a>
                 </li>
-
               </ul>
+
+              <li class="nav-item">
+                <a href="pages/examples/contactanos.html" class="nav-link">
+                  <i class="nav-icon far fa-envelope"></i>
+                  <p>
+                    Contacto
+                  </p>
+                </a>
+              </li>
+              
         </nav>
         <!-- /.sidebar-menu -->
       </div>
