--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -101,37 +101,39 @@
               </li>
           
               <li class="nav-item">
-                <a href="../example/empleados.html" class="nav-link">
-                  <i class="nav-icon fas fa-user"></i>
+                <a href="#" class="nav-link">
+                  <i class="nav-icon  fas fa-users"></i>
                   <p>
-                    Empleados
-                    
+                    Personas
+                    <i class="fas fa-angle-left right"></i>
+                   
                   </p>
                 </a>
-              </li>
-    
-              <li class="nav-item">
-                <a href="../examples/clientes.html" class="nav-link">
-                  <i class="nav-icon fas fa-users"></i>
-                  <p>
-                    Clientes
-                    
-                  </p>
-                </a>
-              </li>
-    
-              <li class="nav-item">
-                <a href="../example/proveedores.html" class="nav-link">
-                  <i class="nav-icon fas fa-address-book"></i>
-                  <p>
-                    Proveedores
-                    
-                  </p>
-                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="../examples/empleados.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Usuarios</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../examples/clientes.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Clientes</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../examples/proveedores.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Proveedores</p>
+                    </a>
+                  </li>            
+                  
+                </ul>
               </li>
     
           <li class="nav-item">
-            <a href="../example/categorias.html" class="nav-link">
+            <a href="../examples/categorias.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Categorias
@@ -153,14 +155,24 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="../example/inventario.html" class="nav-link">
+                <a href="../examples/inventario.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Inventario</p>
                 </a>
               </li>
 
               <li class="nav-item">
-                <a href="../example/reporte_inventario.html" class="nav-link">
+                <a href="../examples/puntoreorden.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Punto Reorden
+                    <span class="right badge badge-danger">!</span>
+                  </p>
+                </a>
+              </li>
+              
+              <li class="nav-item">
+                <a href="../examples/reporte_inventario.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Inventario</p>
                 </a>
