--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -170,13 +170,7 @@
                   </p>
                 </a>
               </li>
-              
-              <li class="nav-item">
-                <a href="../examples/reporte_inventario.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Inventario</p>
-                </a>
-              </li>              
+                       
               
             </ul>
           </li>
@@ -216,13 +210,7 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Archivo de Factura</p>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a href="boxed copy.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Compras</p>
-                </a>
-              </li>            
+              </li>         
               
             </ul>
           </li>
@@ -248,15 +236,49 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Crear Venta</p>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a href="../layout/boxed.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Ventas</p>
-                </a>
-              </li>            
+              </li>           
             </ul>
           </li>  
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas   fa-warehouse"></i>
+             
+             
+              <p>
+                Reporte
+                <i class="fas fa-angle-left right"></i>
+               
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="../examples/reporte_inventario.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Reporte de Inventario</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="boxed copy.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Reporte de Compras
+                    <span class="right badge badge-danger">!</span>
+                  </p>
+                </a>
+              </li>    
+              
+              <li class="nav-item">
+                <a href="boxed.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Reporte de Venta
+                    <span class="right badge badge-danger">!</span>
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a href="../examples/contactanos.html" class="nav-link">
               <i class="nav-icon far fa-envelope"></i>
