--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -181,13 +181,7 @@
                     </p>
                   </a>
                 </li>
-  
-                <li class="nav-item">
-                  <a href="../examples/reporte_inventario.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Inventario</p>
-                  </a>
-                </li>              
+            
                 
               </ul>
             </li>
@@ -228,12 +222,6 @@
                     <p>Archivo de Factura</p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="boxed copy.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Compras</p>
-                  </a>
-                </li>
 
               </ul>
             </li>
@@ -260,16 +248,52 @@
                     <p>Crear Venta</p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="boxed.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Ventas</p>
-                  </a>
-                </li>
               </ul>
 
               <li class="nav-item">
-                <a href="pages/examples/contactanos.html" class="nav-link">
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas   fa-warehouse"></i>
+                 
+                 
+                  <p>
+                    Reporte
+                    <i class="fas fa-angle-left right"></i>
+                   
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="../examples/reporte_inventario.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Reporte de Inventario</p>
+                    </a>
+                  </li>
+    
+                  <li class="nav-item">
+                    <a href="boxed copy.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Compras
+                        
+                      </p>
+                    </a>
+                  </li>    
+                  
+                  <li class="nav-item">
+                    <a href="boxed.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Venta
+                        
+                      </p>
+                    </a>
+                  </li>
+    
+                </ul>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/contactanos.html" class="nav-link">
                   <i class="nav-icon far fa-envelope"></i>
                   <p>
                     Contacto
