--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -181,14 +181,7 @@
                       <span class="right badge badge-danger">!</span>
                     </p>
                   </a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="../examples/reporte_inventario.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Inventario</p>
-                  </a>
-                </li>              
+                </li>            
                 
               </ul>
             </li>
@@ -229,12 +222,6 @@
                     <p>Archivo de Factura</p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="boxed copy.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Compras</p>
-                  </a>
-                </li>
 
               </ul>
             </li>
@@ -261,13 +248,48 @@
                     <p>Crear Venta</p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="boxed.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Ventas</p>
-                  </a>
-                </li>
               </ul>
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas   fa-warehouse"></i>
+                 
+                 
+                  <p>
+                    Reporte
+                    <i class="fas fa-angle-left right"></i>
+                   
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="../examples/reporte_inventario.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Reporte de Inventario</p>
+                    </a>
+                  </li>
+    
+                  <li class="nav-item">
+                    <a href="boxed copy.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Compras
+                        
+                      </p>
+                    </a>
+                  </li>    
+                  
+                  <li class="nav-item">
+                    <a href="boxed.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Venta
+                       
+                      </p>
+                    </a>
+                  </li>
+    
+                </ul>
+              </li>
               
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
