--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -180,13 +180,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </p>
                   </a>
                 </li>
-                
-                <li class="nav-item">
-                  <a href="../examples/reporte_inventario.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Inventario</p>
-                  </a>
-                </li>
+
 
               </ul>
             </li>
@@ -226,13 +220,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <i class="far fa-circle nav-icon"></i>
                     <p>Archivo de Factura</p>
                   </a>
-                </li>
-                <li class="nav-item">
-                  <a href="boxed copy.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Compras</p>
-                  </a>
-                </li>            
+                </li>          
                 
               </ul>
             </li>
@@ -259,15 +247,49 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <p>Crear Venta</p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="boxed.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Reporte de Ventas</p>
-                  </a>
-                </li>
               </ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas   fa-warehouse"></i>
+             
+             
+              <p>
+                Reporte
+                <i class="fas fa-angle-left right"></i>
+               
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="../examples/reporte_inventario.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Reporte de Inventario</p>
+                </a>
+              </li>
 
+              <li class="nav-item">
+                <a href="boxed copy.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Reporte de Compras
+                   
+                  </p>
+                </a>
+              </li>    
               
+              <li class="nav-item">
+                <a href="boxed.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Reporte de Venta
+                    
+                  </p>
+                </a>
+              </li>
+
+            </ul>
+          </li>
+             
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
                     <i class="nav-icon far fa-envelope"></i>
