--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -168,15 +168,7 @@
                     <span class="right badge badge-danger">!</span>
                   </p>
                 </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="../examples/reporte_inventario.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Inventario</p>
-                </a>
-              </li>              
-              
+              </li>           
             </ul>
           </li>
 
@@ -215,13 +207,7 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Archivo de Factura</p>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a href="boxed copy.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Compras</p>
-                </a>
-              </li>            
+              </li>          
               
             </ul>
           </li>
@@ -247,14 +233,49 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Crear Venta</p>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a href="boxed.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Ventas</p>
-                </a>
-              </li>            
+              </li>           
             </ul>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <i class="nav-icon fas   fa-warehouse"></i>
+               
+               
+                <p>
+                  Reporte
+                  <i class="fas fa-angle-left right"></i>
+                 
+                </p>
+              </a>
+              <ul class="nav nav-treeview">
+                <li class="nav-item">
+                  <a href="reporte_inventario.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Reporte de Inventario</p>
+                  </a>
+                </li>
+  
+                <li class="nav-item">
+                  <a href="boxed copy.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Reporte de Compras
+                      
+                    </p>
+                  </a>
+                </li>    
+                
+                <li class="nav-item">
+                  <a href="boxed.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Reporte de Venta
+                     
+                    </p>
+                  </a>
+                </li>
+  
+              </ul>
+            </li>
             <li class="nav-item">
               <a href="../examples/contactanos.html" class="nav-link">
                 <i class="nav-icon far fa-envelope"></i>
