--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -288,6 +288,28 @@
                       </p>
                     </a>
                   </li>
+
+                  <li class="nav-item">
+                    <a href="../examples/reporte_provedoor.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+
+                        Reporte de proveedor
+                        
+                      </p>
+                    </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a href="../examples/reporte_cliente.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        
+                        Reporte de cliente
+                        
+                      </p>
+                    </a>
+                  </li>
     
                 </ul>
               </li>
