--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -263,7 +263,7 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     Reporte de Compras
-                    <span class="right badge badge-danger">!</span>
+                   
                   </p>
                 </a>
               </li>    
@@ -273,7 +273,29 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     Reporte de Venta
-                    <span class="right badge badge-danger">!</span>
+                    
+                  </p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/reporte_provedoor.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+
+                    Reporte de proveedor
+                    
+                  </p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/reporte_cliente.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    
+                    Reporte de cliente
+                    
                   </p>
                 </a>
               </li>
