--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -287,6 +287,28 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </a>
               </li>
 
+              <li class="nav-item">
+                <a href="../examples/reporte_provedoor.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+
+                    Reporte de proveedor
+                    
+                  </p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/reporte_cliente.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    
+                    Reporte de cliente
+                    
+                  </p>
+                </a>
+              </li>
+
             </ul>
           </li>
              
