--- a/pages/layout/boxed.html
+++ b/pages/layout/boxed.html
@@ -288,8 +288,28 @@
                     </a>
                   </li>
     
+                  <li class="nav-item">
+                    <a href="../examples/reporte_provedoor.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Proveedor
+                       
+                      </p>
+                    </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a href="../examples/reporte_cliente.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>
+                        Reporte de Clientes
+                       
+                      </p>
+                    </a>
+                  </li>
                 </ul>
               </li>
+
               
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
